--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -10,4 +10,5 @@ RUN curl -sS https://getcomposer.org/installer | php \
   && mv composer.phar /usr/local/bin/composer \
   && composer self-update
 
+RUN useradd -m mtmt
 WORKDIR /var/www
